# causal_aware_xray

./: .gitignore  README.md  pyproject.toml  test_dataset.py
configs/: train.yaml  train_template.yaml
src/data/: __init__.py  chestxray14.py
src/evaluation/: __init__.py  evaluate.py  metrics.py
src/models/: __init__.py  classifier.py  constraint_projection.py
src/training/: __init__.py  losses.py  train.py
tests/: conftest.py  test_classifier.py  test_constraint_layer.py  test_dataset.py  test_integration.py  test_losses.py
